# pilotx-agent-support

./: .gitignore  Dockerfile  api_service.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
resources/: config-schema.yaml  log-config.yaml
resources/config/: dev.yaml  prod.yaml  staging.yaml
service/: __init__.py
service/config/: __init__.py  app_metadata.py  log_config.py
src/agent_support/: __init__.py  support_services.py
src/agent_support/auth/: __init__.py  firebase.py
src/agent_support/config/: __init__.py  app.py
src/agent_support/entities/: __init__.py  dto.py
src/agent_support/storage/: __init__.py  firestore.py
src/agent_support/utils/: __init__.py  constants.py  exceptions.py
